adopted file system

--- a/ExamGame/App/ExamGame_log.html
+++ b/ExamGame/App/ExamGame_log.html
@@ -21,64 +21,63 @@ div.messages { margin: 0 10% 28px; padding 0 0 28px; border: 1px solid; border-c
 <body>
 <h2>ExamGame Log</h2>
 <div class="messages">
-<div class="info">416: ℹ️ 2020/9/14 23:46:11</div>
-<div class="info">416: ⌛ Preparing for setup...</div>
-<div class="info">416: ℹ️ Siv3D Engine version 0.4.2 (Windows Desktop)</div>
-<div class="info">416: ℹ️ CPU vendor: GenuineIntel</div>
-<div class="info">416: ℹ️ CPU name: Intel(R) Core(TM) i5-8265U CPU @ 1.60GHz</div>
-<div class="info">416: ℹ️ Instruction set extensions: SSE, SSE2, SSE3, SSSE3, SSE4.1, SSE4.2, AES-NI, AVX, FMA3, AVX2</div>
-<div class="info">416: ℹ️ CCPU initialized</div>
-<div class="info">416: ℹ️ CProfiler initialized</div>
-<div class="info">416: ℹ️ CImageFormat initialized</div>
-<div class="info">421: ℹ️ CObjectDetection initialized</div>
-<div class="info">431: ℹ️ CWindow initialized</div>
-<div class="info">431: ℹ️ CCursor initialized</div>
-<div class="info">431: ℹ️ CKeyboard initialized</div>
-<div class="info">431: ℹ️ An input digitizer with support for multiple inputs found</div>
-<div class="info">431: ℹ️ CMouse initialized</div>
-<div class="info">497: ℹ️ Gamepad initialized</div>
-<div class="info">502: ℹ️ CXInput initialized</div>
-<div class="info">511: ℹ️ CTextInput initialized</div>
-<div class="info">534: ℹ️ TextToSpeech available</div>
-<div class="info">534: ℹ️ CTextToSpeech initialized</div>
-<div class="info">534: ℹ️ CClipboard initialized</div>
-<div class="info">538: ℹ️ CDragDrop initialized</div>
-<div class="info">602: ℹ️ Codec_MF initialized</div>
-<div class="info">602: ℹ️ CAudioFormat initialized</div>
-<div class="info">603: ℹ️ CAudio_X28 initialized</div>
-<div class="info">603: ℹ️ CFFT initialized</div>
-<div class="info">604: ℹ️ CNetwork initialized</div>
-<div class="info">604: ℹ️ ToastNotification is available</div>
-<div class="info">604: ℹ️ CToastNotification initialized</div>
-<div class="info">607: ℹ️ DXGIFactory5 is available</div>
-<div class="info">607: ℹ️ IDXGIAdapter [0]: Intel(R) UHD Graphics 620 (Dedicated GPU memory: 128MiB, System: 0B, Shared: 3.93GiB) (supports Direct3D 11.1 runtime)</div>
-<div class="info">648: ℹ️ - [D3D_DRIVER_TYPE_HARDWARE] selected: D3D_FEATURE_LEVEL_12_1 (max: D3D_FEATURE_LEVEL_12_1)</div>
-<div class="info">652: ℹ️ 1 adapters available</div>
-<div class="info">659: ℹ️ [D3D_DRIVER_TYPE_WARP] supports D3D_FEATURE_LEVEL_11_1</div>
-<div class="info">660: ℹ️ [D3D_DRIVER_TYPE_REFERENCE] supports D3D_FEATURE_LEVEL_10_1</div>
-<div class="info">660: ℹ️ selectedAdapterIndex: 0 (Intel(R) UHD Graphics 620)</div>
-<div class="info">680: ✅ D3D11 device created. Driver type: Hardware (D3D_FEATURE_LEVEL_12_1)</div>
-<div class="info">692: `d3dcompiler_47.dll` found</div>
-<div class="info">692: HLSL compiler is available</div>
-<div class="info">693: ℹ️ CShader_D3D11 initialized</div>
-<div class="info">693: 4x MSAA support:</div>
-<div class="info">693: ℹ️ CTexture_D3D11 initialized</div>
-<div class="info">695: ℹ️ CRenderer2D_D3D11 initialized</div>
-<div class="info">695: ℹ️ CGraphics_D3D11 initialized</div>
-<div class="info">695: ℹ️ CScreenCapture initialized</div>
-<div class="info">718: ℹ️ CFont initialized</div>
-<div class="info">718: ℹ️ CSDFFont initialized</div>
-<div class="info">723: ℹ️ CGUI initialized</div>
-<div class="info">723: ℹ️ CEffect initialized</div>
-<div class="info">723: ℹ️ CPrint initialized</div>
-<div class="info">723: ℹ️ Asset initialized</div>
-<div class="info">724: ✅ Siv3D engine setup completed</div>
-<hr width="99%"><div class="info">737: ℹ️ CScript initialized</div>
-<div class="fail">6192: ❌ BinaryReader: Failed to open file &quot;Probs/Probs.csv&quot;</div>
-<div class="fail">6195: ❌ BinaryReader: Failed to open file &quot;Probs/Datas/yumejuku1.txt&quot;</div>
-<div class="error">6195: 🛑 Application terminated due to an exception `EXCEPTION_ACCESS_VIOLATION`</div>
-<hr width="99%"><div class="info">7640: ✅ Siv3D engine has terminated</div>
-<div class="info">7641: ℹ️ 2020/9/14 23:46:19</div>
+<div class="info">101: ℹ️ 2021/4/21 23:50:10</div>
+<div class="info">101: ⌛ Preparing for setup...</div>
+<div class="info">101: ℹ️ Siv3D Engine version 0.4.2 (Windows Desktop)</div>
+<div class="info">101: ℹ️ CPU vendor: GenuineIntel</div>
+<div class="info">101: ℹ️ CPU name: Intel(R) Core(TM) i7-1065G7 CPU @ 1.30GHz</div>
+<div class="info">101: ℹ️ Instruction set extensions: SSE, SSE2, SSE3, SSSE3, SSE4.1, SSE4.2, AES-NI, SHA, AVX, FMA3, AVX2, AVX-512 F</div>
+<div class="info">101: ℹ️ CCPU initialized</div>
+<div class="info">101: ℹ️ CProfiler initialized</div>
+<div class="info">101: ℹ️ CImageFormat initialized</div>
+<div class="info">106: ℹ️ CObjectDetection initialized</div>
+<div class="info">127: ℹ️ CWindow initialized</div>
+<div class="info">128: ℹ️ CCursor initialized</div>
+<div class="info">128: ℹ️ CKeyboard initialized</div>
+<div class="info">128: ℹ️ An input digitizer with support for multiple inputs found</div>
+<div class="info">128: ℹ️ CMouse initialized</div>
+<div class="info">156: ℹ️ Gamepad initialized</div>
+<div class="info">158: ℹ️ CXInput initialized</div>
+<div class="info">164: ℹ️ CTextInput initialized</div>
+<div class="info">174: ℹ️ TextToSpeech available</div>
+<div class="info">174: ℹ️ CTextToSpeech initialized</div>
+<div class="info">175: ℹ️ CClipboard initialized</div>
+<div class="info">183: ℹ️ CDragDrop initialized</div>
+<div class="info">193: ℹ️ Codec_MF initialized</div>
+<div class="info">193: ℹ️ CAudioFormat initialized</div>
+<div class="info">195: ℹ️ CAudio_X28 initialized</div>
+<div class="info">196: ℹ️ CFFT initialized</div>
+<div class="info">198: ℹ️ CNetwork initialized</div>
+<div class="info">198: ℹ️ ToastNotification is available</div>
+<div class="info">198: ℹ️ CToastNotification initialized</div>
+<div class="info">201: ℹ️ DXGIFactory5 is available</div>
+<div class="info">202: ℹ️ IDXGIAdapter [0]: Intel(R) Iris(R) Plus Graphics (Dedicated GPU memory: 128MiB, System: 0B, Shared: 7.88GiB) (supports Direct3D 11.1 runtime)</div>
+<div class="info">256: ℹ️ - [D3D_DRIVER_TYPE_HARDWARE] selected: D3D_FEATURE_LEVEL_12_1 (max: D3D_FEATURE_LEVEL_12_1)</div>
+<div class="info">263: ℹ️ 1 adapters available</div>
+<div class="info">269: ℹ️ [D3D_DRIVER_TYPE_WARP] supports D3D_FEATURE_LEVEL_11_1</div>
+<div class="info">269: ℹ️ [D3D_DRIVER_TYPE_REFERENCE] supports D3D_FEATURE_LEVEL_10_1</div>
+<div class="info">269: ℹ️ selectedAdapterIndex: 0 (Intel(R) Iris(R) Plus Graphics)</div>
+<div class="info">319: ✅ D3D11 device created. Driver type: Hardware (D3D_FEATURE_LEVEL_12_1)</div>
+<div class="info">330: `d3dcompiler_47.dll` found</div>
+<div class="info">330: HLSL compiler is available</div>
+<div class="info">332: ℹ️ CShader_D3D11 initialized</div>
+<div class="info">332: 4x MSAA support:</div>
+<div class="info">332: ℹ️ CTexture_D3D11 initialized</div>
+<div class="info">336: ℹ️ CRenderer2D_D3D11 initialized</div>
+<div class="info">337: ℹ️ CGraphics_D3D11 initialized</div>
+<div class="info">337: ℹ️ CScreenCapture initialized</div>
+<div class="info">340: ℹ️ CFont initialized</div>
+<div class="info">341: ℹ️ CSDFFont initialized</div>
+<div class="info">342: ℹ️ CGUI initialized</div>
+<div class="info">342: ℹ️ CEffect initialized</div>
+<div class="info">343: ℹ️ CPrint initialized</div>
+<div class="info">343: ℹ️ Asset initialized</div>
+<div class="info">343: ✅ Siv3D engine setup completed</div>
+<hr width="99%"><div class="info">376: ℹ️ CScript initialized</div>
+<div class="fail">3845: ❌ BinaryReader: Failed to open file &quot;Probs/Datas/ling1.txt&quot;</div>
+<div class="error">3845: 🛑 Application terminated due to an exception `Unknown Exception`</div>
+<hr width="99%"><div class="info">4784: ✅ Siv3D engine has terminated</div>
+<div class="info">4784: ℹ️ 2021/4/21 23:50:15</div>
 </div>
 </body>
 </html>
